<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/title_setting_menu" >
        <MultiSelectListPreference
            android:dialogTitle="@string/title_choose_menu"
            android:entries="@array/title"
            android:entryValues="@array/index"
            android:key="menu_list"
            android:summary="@string/content_choose_menu"
            android:title="@string/label_choose_menu" />
        
        <ListPreference
            android:dialogTitle="@string/title_choose_site"
            android:entries="@array/sites"
            android:entryValues="@array/index"
            android:key="site_list"
            android:summary="@string/content_choose_site"
            android:title="@string/label_choose_site" />
    </PreferenceCategory>

</PreferenceScreen>