<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kevin.movieHeaven.MainActivity" >

     <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="withText|ifRoom"/>
      <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/action_my_starred"
        android:title="@string/action_my_starred"
        app:showAsAction="withText"/>
     <item
        android:id="@+id/action_update"
        android:title="@string/action_update"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="withText"/>

</menu>
